pkg/controller/service/testdata/service/basic/expected.yaml.d/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: oneimage-publish-1234567890ab
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/service-publish": "true"
    "acorn.io/container-name": "oneimage"
    "acorn.io/managed": "true"
spec:
  type: LoadBalancer
  ports:
    - port: 90
      targetPort: 91
      protocol: "TCP"
      name: "90"
  selector:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/managed": "true"
    "acorn.io/container-name": "oneimage"
---
kind: Service
apiVersion: v1
metadata:
  name: oneimage
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "oneimage"
    "acorn.io/managed": "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 81
      protocol: "TCP"
      appProtocol: "HTTP"
      name: "80"
    - port: 90
      targetPort: 91
      protocol: "TCP"
      name: "90"
  selector:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/managed": "true"
    "acorn.io/container-name": "oneimage"
